# patui

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
proto/: ptplugin.proto
src/: cli.rs  db.rs  main.rs  runner.rs  tui.rs  types.rs  utils.rs
src/cli/: describe.rs  edit.rs  get.rs  new.rs  util.rs
src/cli/new/: test_setup.rs
src/cli/resources/: test.rs
src/db/: sqlite.rs  types.rs
src/runner/: process.rs  steps.rs
src/runner/steps/: assertion.rs  assertions.rs  other.rs  plugin.rs  process.rs  reader.rs  sender.rs  transform_stream.rs  writer.rs
src/tui/: app.rs  bottom_bar.rs  components.rs  editor.rs  error.rs  panes.rs  popups.rs  terminal.rs  top_bar.rs  types.rs  widgets.rs
src/tui/components/: bottom_bar.rs  error.rs  main.rs  middle.rs  misc.rs  tests.rs  top_bar.rs  widgets.rs
src/tui/components/tests/: create.rs  crupdate.rs  detail.rs  edit.rs  root.rs
src/tui/components/widgets/: button.rs  textarea.rs
src/tui/panes/: test_details.rs  test_list.rs
src/tui/popups/: error.rs  help.rs  test_edit.rs
src/tui/widgets/: button.rs  patui_widget.rs  scrollable_area.rs  table.rs  text.rs  text_display.rs  textarea.rs
src/tui/widgets/snapshots/: patui__tui__widgets__scrollable_area__tests__first_navigation_text_down.snap  patui__tui__widgets__scrollable_area__tests__page_scroll.snap  patui__tui__widgets__scrollable_area__tests__render_text_widgets.snap  patui__tui__widgets__scrollable_area__tests__scrollable_area_simple.snap  patui__tui__widgets__scrollable_area__tests__scrollable_area_with_different_first_line.snap  patui__tui__widgets__scrollable_area__tests__scrollable_area_with_overlaps.snap  patui__tui__widgets__scrollable_area__tests__scrollable_with_table_widget_1.snap  patui__tui__widgets__scrollable_area__tests__scrollable_with_table_widget_2.snap  patui__tui__widgets__scrollable_area__tests__scrollable_with_table_widget_3.snap  patui__tui__widgets__scrollable_area__tests__scrollable_with_table_widget_4.snap  patui__tui__widgets__scrollable_area__tests__scrollable_with_table_widget_5.snap  patui__tui__widgets__scrollable_area__tests__scrollable_with_table_widget_6.snap  patui__tui__widgets__scrollable_area__tests__scrollable_with_table_widget_7.snap  patui__tui__widgets__scrollable_area__tests__simple_navigation.snap  patui__tui__widgets__scrollable_area__tests__simple_navigation_with_wrapping_backward.snap  patui__tui__widgets__scrollable_area__tests__simple_navigation_with_wrapping_forward.snap  patui__tui__widgets__scrollable_area__tests__simple_render_block.snap  patui__tui__widgets__scrollable_area__tests__simple_render_block_with_offset.snap  patui__tui__widgets__scrollable_area__tests__simple_render_block_with_offset_into_top_and_bottom_widget.snap  patui__tui__widgets__scrollable_area__tests__simple_render_block_with_offset_into_widget.snap  patui__tui__widgets__scrollable_area__tests__simple_scroll.snap  patui__tui__widgets__table__tests__bordered_table-2.snap  patui__tui__widgets__table__tests__bordered_table.snap  patui__tui__widgets__table__tests__display_table_normal.snap  patui__tui__widgets__table__tests__display_table_short_width.snap  patui__tui__widgets__table__tests__display_table_with_offsets.snap  patui__tui__widgets__table__tests__display_table_with_selected_idx.snap  patui__tui__widgets__table__tests__navigate_table-2.snap  patui__tui__widgets__table__tests__navigate_table-3.snap  patui__tui__widgets__table__tests__navigate_table.snap  patui__tui__widgets__table__tests__scroll_table-2.snap  patui__tui__widgets__table__tests__scroll_table.snap  patui__tui__widgets__table__tests__scroll_with_selection_table-2.snap  patui__tui__widgets__table__tests__scroll_with_selection_table.snap  patui__tui__widgets__text_display__tests__big_text_display_new.snap  patui__tui__widgets__text_display__tests__select_text-2.snap  patui__tui__widgets__text_display__tests__select_text-3.snap  patui__tui__widgets__text_display__tests__select_text-4.snap  patui__tui__widgets__text_display__tests__select_text.snap  patui__tui__widgets__text_display__tests__select_text2-2.snap  (+4 more)
src/types/: expr.rs  other.rs  process.rs  steps.rs  transform_stream.rs
src/types/expr/: ast.rs  lexer.rs  parser.rs  query.rs  visitor.rs
src/types/steps/: other.rs  process.rs  transform_stream.rs
templates/: simple_process.yaml  streaming_process.yaml
test_progs/json_spitter/: Cargo.toml
test_progs/json_spitter/src/: main.rs
test_progs/test_plugin/: Cargo.toml  build.rs
test_progs/test_plugin/src/: main.rs
tests/: test_run.rs  test_setup.rs  types.rs  utils.rs
tests/data/: test.json  test.txt
