[package]
name = "patui"
version = "0.1.0"
edition = "2021"
authors = ["Steven Trotter <stevetrot@gmail.com>"]
description = "A TUI based powerful testing application built for portability and extensibility"
license = "MIT"
repository = "https://github.com/strottos/patui"
homepage = "https://github.com/strottos/patui"

[dependencies]
better-panic = { git = "https://github.com/strottos/better-panic", branch = "upgrade-backtrace" } # Includes a fix that stops hanging on ARM Windows targets.
bincode = "1.3.3"
blake3 = "1.5.4"
bytes = { version = "1.8.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["cargo", "derive", "unicode", "string", "wrap_help"] }
color-eyre = { git = "https://github.com/eyre-rs/eyre/" }
#color-eyre = "0.6.3"
convert_case = "0.6.0"
crossterm = { version = "0.28.1", features = ["event-stream", "serde"] }
derive_builder = "0.20.0"
edit = "0.1.5"
either = { version = "1.13.0", features = ["serde"] }
etcetera = "0.8.0"
eyre = "0.6.12"
futures = "0.3.30"
human-panic = "2.0.1"
indexmap = "2.4.0"
lazy_static = "1.5.0"
libc = "0.2.158"
logos = "0.14.2"
portable-pty = { version = "0.8.1", features = ["serde"] }
ratatui = { version = "0.28.1", features = ["unstable-widget-ref"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yaml = "0.9.34"
strip-ansi-escapes = "0.2.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.41.1", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
tokio-rusqlite = "0.5.1"
tokio-util = { version = "0.7.12", features = ["io"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tui-textarea = "0.6.1"

[dev-dependencies]
assert_cmd = "2.0.16"
assertor = "0.0.2"
insta = { version = "1.39.0", features = ["yaml"] }
tempfile = "3.12.0"
textwrap = "0.16.1"
tracing-test = "0.2.5"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
