[package]
name = "test_patui_plugin"
version = "0.1.0"
edition = "2021"
authors = ["Steven Trotter <stevetrot@gmail.com>"]
description = "A TUI based powerful testing application built for portability and extensibility"
license = "MIT"
repository = "https://github.com/strottos/patui"
homepage = "https://github.com/strottos/patui"

[dependencies]
async-stream = "0.3.6"
better-panic = { git = "https://github.com/strottos/better-panic", branch = "upgrade-backtrace" } # Includes a fix that stops hanging on ARM Windows targets.
bytes = { version = "1.9.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["cargo", "derive", "unicode", "string", "wrap_help"] }
color-eyre = { git = "https://github.com/eyre-rs/eyre/" }
eyre = "0.6.12"
libc = "0.2.158"
prost = "0.13.4"
rmp-serde = "1.3.0"
serde = { version = "1.0.216", features = ["derive"] }
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.41.1", features = [ "macros", "rt-multi-thread", "time" ] }
tokio-stream = "0.1.17"
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12.3"
